--- a/src/front-end/components/header.css
+++ b/src/front-end/components/header.css
@@ -2,8 +2,8 @@
     font-family: "SF-Pro";
     display: block;
     margin-left: 325px;
+    margin-top: 20px;
     margin-right: 20px;
-    margin-top: 25px;
     text-align: left;
 }
 
@@ -14,6 +14,11 @@
     object-position: 10%;
     align-items: center;
     height: 72px;
+}
+
+#file {
+    height: 30px;
+    display: flex;
 }
 
 .header {
@@ -35,11 +40,20 @@ button {
     display: inline;
 }
 
- .new-button {
+.new-button {
     color:white;
     background-color: #04a8c5;
     border: 4px solid #04a8c5 ;
-    border-radius: 8px;
+    border-radius: 6px;
+    cursor: pointer;
+}
+
+.edit-button {
+    color:white;
+    margin-left: 17px;
+    background-color: #FFBB33;
+    border: 4px solid #FFBB33 ;
+    border-radius: 6px;
     cursor: pointer;
 }
 
@@ -61,7 +75,7 @@ button {
 
 h1 {
     display: inline;
-    font-size: 40px;
+    font-size: 41px;
     font-weight: bold;
     letter-spacing: 1.8px;
     vertical-align: middle;
@@ -132,6 +146,18 @@ h1 {
 #header_forward{
     margin-right: 0;
     margin-left: 5px;
+}
+
+#todaysLog {
+    display: inline;
+}
+
+#monthlyLog {
+    display: inline;
+}
+
+#futureLog {
+    display: inline;
 }
 
 .hide{
