--- a/src/front-end/components/fileLocation.css
+++ b/src/front-end/components/fileLocation.css
@@ -1,5 +1,6 @@
-#fileLocaiton {
+#fileLocation {
     display: inline;  
+    margin-right: 8px;
 }
 
 #locationTitle {
@@ -13,7 +14,7 @@
 #fileImg {
     height: 14px;
     width: 14px;
-    margin-left: 8px;
+    margin-right: 5px;
     filter: var(--icon-filter);
     display: inline;
 }
