--- a/src/front-end/components/navbar.css
+++ b/src/front-end/components/navbar.css
@@ -12,8 +12,8 @@
     bottom: 0;
     left: 0;
     display: block;
-
-    background-color: var(--navbar-background-color);
+    box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.25);
+    background-color: var(--sidebar-background);
 }
 
 /* exclusively for the collapsed version of nav */
