--- a/src/front-end/components/header.css
+++ b/src/front-end/components/header.css
@@ -1,16 +1,11 @@
 :host {
     font-family: "SF-Pro";
-    display: block;
-    margin-left: 325px;
-    margin-top: 20px;
-    margin-right: 20px;
-    text-align: left;
 }
 
 /* Top navigation */
 #container {
     display: flex;
-    width: flex;
+    width: 100%;
     object-position: 10%;
     align-items: center;
     height: 72px;
@@ -25,60 +20,54 @@
     font-family: "SF-Pro";
     position: relative;
     height: 56px;
+    margin-top: 23px;
     display: flex;
     align-items: center;
     flex: 2;/* Use half of the space for the title */
-    border-bottom: solid 2px var(--border-color);
+    border-bottom: solid 1px var(--divider-color);
     justify-content: space-between;
+}
+
+.header > div{
+    margin-bottom: 17px;
 }
 
 button {
     user-select: none;
     vertical-align: middle;
     border: none;
+    font-size: 14px;
+    font-weight: bold;
     background-color: rgba(0,0,0,0);
     display: inline;
 }
 
 .new-button {
-    color:white;
-    background-color: #04a8c5;
-    border: 4px solid #04a8c5 ;
+    color: var(--highlighted-font-color);
+    background-color: var(--primary-button-color);
+    height: 31px;
+    padding: 0 9px;
     border-radius: 6px;
     cursor: pointer;
 }
 
 .edit-button {
-    color:white;
+    color: var(--highlighted-font-color);
     margin-left: 17px;
-    background-color: #FFBB33;
-    border: 4px solid #FFBB33 ;
+    background-color: var(--secondary-button-color);
+    height: 31px;
+    padding: 0 9px;
     border-radius: 6px;
     cursor: pointer;
-}
-
-.imgbutton {
-    height: 20px;
-}
-
-.imgbutton img {
-    opacity: 20%;
-    filter: var(--icon-filter);
-    height: 100%;
-    cursor: pointer;
-}
-
-.imgbutton:hover img {
-    opacity: 100%;
-    transition: opacity 150ms;
 }
 
 h1 {
     display: inline;
     font-size: 41px;
     font-weight: bold;
-    letter-spacing: 1.8px;
+    letter-spacing: 1.1px;
     vertical-align: middle;
+
     z-index: 0;
     outline: none;
 }
@@ -86,10 +75,11 @@ h1 {
 .search_bar {
     display: flex;
     align-items: center;
-    margin: 15px auto 15px 10px;
+    margin: 15px 49px 0 49px;
     padding: 0 5px;
     border-radius: 5px;
-    border-color: var(--border-color); /*rgba(0, 0, 0, 0.1);*/
+    box-shadow: 1px 1px 9px 0 var(--card-shadow);
+    border-color: var(--card-shadow);
     border-width: 2px;
     border-style: solid;
     opacity: 60%;
@@ -109,12 +99,12 @@ h1 {
 .search_bar input{
 
     background-color: rgba(0, 0, 0, 0);
-    color: var(--content-foreground-color);
+    color: var(--normal-font-color);
     font-size: 14pt;
     opacity: 90%;
-    height: 35px;
+    height: 42px;
     text-align: left;
-    width: 400px;
+    width: 370.03px;
     border: solid;
     border-radius: 5px;
     border-color: rgba(0, 0, 0, 0);
