--- a/src/front-end/components/help.css
+++ b/src/front-end/components/help.css
@@ -53,7 +53,7 @@
     max-height: 800px;
     transform: translate(-50%,-50%);
     -ms-transform: translate(-50%,-50%);
-    background-color: var(--content-background-color);
+    background-color: var(--sidebar-background);
 }
 
 .content {
