--- a/src/front-end/components/inlineDropdown.css
+++ b/src/front-end/components/inlineDropdown.css
@@ -7,10 +7,10 @@
 .dropdown-content {
 	display: none;
 	position: absolute;
-	background-color: #FCFCFCCC;
+	background-color: var(--card-background);
 	overflow: auto;
 	border-radius: 6px;
-	box-shadow: 0 0 10px #00000040;
+	box-shadow: 0 0 10px var(--card-shadow);
 }
 
 .dropdown-content ul {
@@ -29,13 +29,13 @@
 	font-size: 16px;
 	cursor: pointer;
 	width: 100%;
-	min-width: 180px;
+	min-width: 150px;
 }
 img{
 	height: 18px;
 	align-self:top;
 	margin-top:10px;
-	margin-left:5px;
+	margin-left:10px;
 	filter: var(--icon-filter)
 }
 li{
@@ -45,17 +45,17 @@ li{
     vertical-align: middle;
 }
 li:hover {
-	background-color: #ECECEC;
+	background-color: var(--card-background-dim);
 }
 
 
 .extra-dropdown-content {
 	display: none;
 	position: absolute;
-	background-color: #FCFCFCCC;
+	background-color:var(--card-background);
 	overflow: auto;
 	border-radius: 6px;
-	box-shadow: 0 0 10px #00000040;
+	box-shadow: 0 0 10px var(--card-shadow);
 }
 
 .extra-dropdown-content ul {
@@ -77,10 +77,10 @@ li:hover {
 	min-width: 180px;
 }
 .arrow{
-	height: 14px;
+	height: 10px;
 	align-self:top;
-	margin-top:12px;
-	margin-right:5px;
+	margin-top:14px;
+	margin-right:10px;
 	filter: var(--icon-filter)
 }
 .show {
