--- a/src/front-end/components/generalSettingsPanel.css
+++ b/src/front-end/components/generalSettingsPanel.css
@@ -2,20 +2,73 @@
     font-family: "SF-Pro";
     display: flex;
     height: 100%;
+    width: 100%;
     flex-direction: column;
     justify-content: flex-end;
+}
+
+label {
+    margin-bottom: 10px;
+    font-size: 17px;
+    font-weight: 500;
+}
+
+label:last-of-type {
+    margin-top: 30px;
+}
+
+input {
+    height: 35px;
+    border: 1px solid var(--lighter-divider-color);
+    box-shadow: 1px 1px 9px 0 var(--card-shadow);
+    font-size: 16px;
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
+span {
+    display: flex;
+    justify-content: space-between;
+}
+
+span input {
+    width: calc(100% - 90px);
+    margin-left: 1.5px;
+    margin-right: 8px;
+}
+span button {
+    width: 75px;
+    height: 38px;
+    font-size: 14px;
+    font-weight: 400;
+    margin-right: 2px;
+    cursor: pointer;
+    opacity: 0.7;
+    background-color: var(--card-background);
+    border: 1px solid var(--lighter-divider-color);
+    box-shadow: 1px 1px 9px 0 var(--card-shadow);
+    transition: 0.3s ease-in-out;
+}
+
+span button:hover {
+    opacity: 1;
+    transition: 0.3s ease-in-out;
 }
 
 #logout {
     margin-top: auto;
     border: none;
-    background-color: #EF233C;
-    color: #FFFFFF;
+    background-color: var(--danger-button-color);
+    color: var(--highlighted-font-color);
     font-size: 22px;
-    height: 30px;
+    height: 32px;
+    width: calc(100% - 46px);
+    margin-left: auto;
+    margin-right: auto;
     padding: 10px;
     border-radius: 5px;
     box-sizing: content-box;
+    box-shadow: 1px 1px 9px 0 var(--card-shadow);
     cursor: pointer;
     transition: background-color 0.2s;
 
@@ -25,6 +78,26 @@
     background-color: pink;
 }
 
+#deleteUser {
+    margin-top: 20px;
+    margin-bottom: 20px;
+    border: none;
+    background-color: var(--sidebar-background);
+    color: var(--normal-font-color);
+    font-size: 22px;
+    height: 32px;
+    width: calc(100% - 46px);
+    margin-left: auto;
+    margin-right: auto;
+    padding: 10px;
+    border-radius: 5px;
+    box-sizing: content-box;
+    border: 1px solid var(--lighter-divider-color);
+    box-shadow: 1px 1px 9px 0 var(--card-shadow);
+    cursor: pointer;
+    transition: background-color 0.2s;
+}
+
 .profile {
-    text-align: center;
+    text-align: left;
 }
