--- a/src/front-end/components/navbar.css
+++ b/src/front-end/components/navbar.css
@@ -12,7 +12,7 @@
     bottom: 0;
     left: 0;
     display: block;
-    box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.25);
+    box-shadow: 0 1px 2px 0 var(--card-shadow);
     background-color: var(--sidebar-background);
 }
 
