--- a/src/front-end/components/settings.css
+++ b/src/front-end/components/settings.css
@@ -18,11 +18,10 @@
 
 .close {
     color: var(--normal-font-color);
-
+    margin-top: 28px;
     width: 40px;
     height: 40px;
     margin-left: auto;
-
     border: none;
     background-color: transparent;
     cursor: pointer;
@@ -31,6 +30,7 @@
 .close img {
     filter: var(--icon-filter);
     width: 20px;
+    margin-right: 30px;
     opacity: 0.5;
     transition: 0.2s;
 }
@@ -53,18 +53,19 @@
     max-height: 800px;
     transform: translate(-50%,-50%);
     -ms-transform: translate(-50%,-50%);
-    background-color: var(--sidebar-background);
+    background-color: var(--body-background);
 }
 
 .sidebar {
     display: flex;
     flex-direction: column;
     align-items: center;
-
+    width: 150px;
     left: 0;
     top: 0;
     bottom: 0;
-    background-color: var(--card-background-dim);
+    background-color: var(--sidebar-background-dim);
+    box-shadow: 0 2px 1px 0 var(--card-shadow);
 }
 
 .content {
@@ -77,27 +78,29 @@
     display: flex;
     flex: 1;
     overflow-y: auto;
-    padding: 20px;
+    padding: 10px 20px;
 }
 
 h1 {
-    grid-column-start: 2;
-    text-align: center;
+    grid-column-start: 1;
+    text-align: left;
+    font-size: 45px;
+    margin: 38px 0 0;
     flex: 1;
 }
 
 header {
     display: grid;
-    grid-template-columns: 1fr auto 1fr;
-    align-items: center;
-    height: 60px;
-    margin-left: 10px;
-    margin-right: 10px;
-    border-bottom: 2px solid var(--divider-color);
+    grid-template-columns: auto 1fr;
+    align-items: flex-start;
+    height: 100px;
+    margin-left: 20px;
+    margin-right: 20px;
+    border-bottom: 2px solid var(--lighter-divider-color);
 }
 
 ::slotted(settings-tab[selected]) {
-    background-color: var(--sidebar-background);
+    background-color: var(--card-background-dim);
 }
 
 ::slotted(settings-panel) {
