--- a/src/front-end/components/block.css
+++ b/src/front-end/components/block.css
@@ -5,7 +5,8 @@
 #textBlock {
 	font-family: "SF-Pro";
 	border: none;
-	overflow: auto;
+	overflow: hidden;
+	word-break: break-all;
 	outline: none;
 	resize: none;
 	display: inline-block;
@@ -25,7 +26,7 @@
 	margin: 7px 0 12px;
 	font-size: 18px;
 	line-height: 28px;
-	width: calc(100% - 74px);
+	width: calc(100% - 38.3px - var(--block-tab-level));
 }
 
 .note{	
@@ -35,14 +36,14 @@
 	font-size: 18px;
 	line-height: 28px;
 	vertical-align: top;
-	width: calc(100% - 95px);
+	width: calc(100% - var(--block-tab-level));
 }
 
 .task{
 	margin: 7px 0 2px;
 	font-size: 18px;
 	line-height: 28px;
-	width: calc(100% - 96px);
+	width: calc(100% - 61.3px) - var(--block-tab-level);
 }
 
 .header1{
@@ -50,7 +51,7 @@
 	line-height: 50px;
 	font-weight: bold;
 	margin: 15px 0 20px;
-	width: calc(100% - 74px);
+	width: calc(100% - 38.3px - var(--block-tab-level));
 }
 
 .header2{
@@ -58,7 +59,7 @@
 	line-height: 36px;
 	font-weight: bold;
 	margin: 8px 0 13px;
-	width: calc(100% - 74px);
+	width: calc(100% - 38.3px - var(--block-tab-level));
 }
 
 .header3{
@@ -66,7 +67,7 @@
 	line-height: 30px;
 	font-weight: bold;
 	margin: 7px 0 10px;
-	width: calc(100% - 74px);
+	width: calc(100% - 38.3px - var(--block-tab-level));
 }
 
 .bold{
@@ -98,13 +99,13 @@
 	filter: var(--icon-filter);
 }
 
-#editorIcons div{
+/* #editorIcons div{
 	display: inline-block;
 	margin-right: 5px;
 	opacity: 1;
 	width: 20px;
 	cursor: pointer;
-}
+} */
 
 .unfocusedIcons{
 	opacity: 0.3;
@@ -214,29 +215,35 @@
 	left: 35px;
 	top: -12px;
 	margin: 0 0 -7px;
+	width: calc(100% - 35px - var(--block-tab-level));
 }
 .noteSignifiers{
 	left: calc(35px - 57px);
 	top: 0;
 	margin: 0 0 -7px;
+	width: calc(100% + 22px - var(--block-tab-level));
 }
 .taskSignifiers{
 	left: 35px;
 	top: -5px;
 	margin: 0 0 -5px;
+	width: calc(100% - 35px - var(--block-tab-level));
 }
 .h1Signifiers{
 	left: 35px;
 	top: -20px;
 	margin: 0 0 -7px;
+	width: calc(100% - 35px - var(--block-tab-level));
 }
 .h2Signifiers{
 	left: 35px;
 	top: -13px;
 	margin: 0 0 -7px;
+	width: calc(100% - 35px - var(--block-tab-level));
 }
 .h3Signifiers{
 	left: 35px;
 	top: -10px;
 	margin: 0 0 -7px;
+	width: calc(100% - 35px - var(--block-tab-level));
 }
