--- a/src/front-end/components/inlineDropdown.css
+++ b/src/front-end/components/inlineDropdown.css
@@ -29,7 +29,8 @@
 	font-size: 16px;
 	cursor: pointer;
 	width: 100%;
-	min-width: 150px;
+	min-width: 130px;
+	margin-right: 10px;
 }
 img{
 	height: 18px;
