--- a/src/front-end/index.css
+++ b/src/front-end/index.css
@@ -24,6 +24,11 @@ div {
 	line-height: 26px;
 }
 
+#dropdownContainer {
+	width: 100%;
+	margin-top: 21px;
+}
+
 #contentWrapper {
 	border: none;
 	overflow: auto;
@@ -35,6 +40,10 @@ div {
 	position: relative;
 	z-index: -1;
 	transition: cubic-bezier(0.77,0.2,0.05,1.0) 0.5s;
+}
+
+index-drop-down {
+	width: 100%;
 }
 
 .centerContent {
