--- a/src/front-end/index.css
+++ b/src/front-end/index.css
@@ -31,7 +31,7 @@ div {
 
 #contentWrapper {
 	border: none;
-	overflow: auto;
+	overflow: hidden;
 	outline: none;
 	display: flex;
 	margin-left: 325px;
@@ -175,9 +175,28 @@ nav-bar {
 	margin: 10px auto;
 }
 
+#displayToggle{
+	float: right;
+	color: var(--highlighted-font-color);
+	margin-top: 20px;
+	margin-right: 130px;
+    background-color: var(--secondary-button-color);
+	user-select: none;
+    vertical-align: middle;
+    border: none;
+    font-size: 14px;
+    font-weight: bold;
+	width:150px;
+    height: 31px;
+    padding: 0 9px;
+    border-radius: 6px;
+    cursor: pointer;
+}
+
 /* Text editor, to be integrated */
 
 main {
 	margin-left: 100px;
 	margin-top: 100px;
 }
+
