--- a/src/front-end/components/logCarousel.css
+++ b/src/front-end/components/logCarousel.css
@@ -8,7 +8,7 @@
 }
 
 #carousel {
-    overflow-x: scroll;
+    overflow-x: auto;
     overflow-y: hidden;
     height: auto;
     display: flex;
@@ -53,4 +53,24 @@ h1 {
     font-size: 19px;
     font-family: "SF-Pro";
     font-weight: bold;
+}
+::-webkit-scrollbar {
+    height: 0.8vw;
+}
+  
+
+::-webkit-scrollbar-track {
+    background: #f1f1f1;
+    border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+    background: #888;
+    height:3vw;
+    border-radius: 10px;
+}
+  
+
+::-webkit-scrollbar-thumb:hover {
+    background: #555;
 }
