front-end/state, front-end/components: Changed heights to make sidebar and log independently scrollable

--- a/src/front-end/components/logNotes.css
+++ b/src/front-end/components/logNotes.css
@@ -1,6 +1,7 @@
 #logNotes {
     border: none;
-    overflow: auto;
+    overflow: hidden;
+	height: max-content;
     outline: none;
     display: block;
     z-index: -1;
