--- a/src/front-end/login/login.css
+++ b/src/front-end/login/login.css
@@ -1,251 +1,167 @@
+/* Default color theme values.
+ * Please use var() with the appropriate variable in web components.
+ * For example:
+ *      border: 2px solid var(--border-color);
+ */
+:root {
+    -webkit-font-smoothing: antialiased;
+    --body-background: #ECECEC;
+    --main-background: #FFFFFF;
+    --primary-button-color: rgba(51, 181, 229, 1);
+    --secondary-button-color: rgba(255, 187, 51, 1);
+    --highlighted-font-color: #FFFFFF;
+    --card-shadow: #00000040;
+    --normal-font-color: #000000;
+    --error-color: #FF0000;
+
+    --margin: 1rem;
+    --corner-roundness: 6px;
+}
+
+@font-face {
+	font-family: "SF-Pro";
+	src: url("../public/fonts/SF-Pro.ttf");
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Satisfy';
+    font-style: normal;
+    font-weight: 400;
+    font-display: swap;
+    src: url(./Satisfy.woff2) format('woff2');
+    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
+
+html, body {
+    height: 100%;
+}
+
+html {
+    display: table;
+    margin: auto;
+}
 
 body {
-    background: rgb(248, 244, 244);
+    width: 500px;
+    display: table-cell;
+    vertical-align: middle;
+    background-color: var(--body-background);
+    font-family: 'SF-Pro', sans-serif;
 }
 
-/* main form box */
-#main-holder {
-    width: 30%;
-    height: 50%;
-    position: absolute;
-    left: 63%;
-    top: 25%;
-    
-    background: #FFFFFF;
-    box-shadow: -3px 2px 10px 3px rgba(0, 0, 0, 0.25);
-    border-radius: 20px;
-}
-  
-#login-error-msg-holder {
-    width: 100%;
-    height: 100%;
-    display: grid;
-    justify-items: center;
-    align-items: center;
-}
-  
-#login-error-msg {
-    width: 23%;
-    text-align: center;
+header > h1 {
+    font-family: 'Satisfy', sans-serif;
     margin: 0;
-    padding: 5px;
-    font-size: 12px;
-    font-weight: bold;
-    color: #8a0000;
-    border: 1px solid #8a0000;
-    background-color: #e58f8f;
-    opacity: 0;
+    padding: 0;
+    text-align: center;
+    font-size: 5rem;
 }
 
-#error-msg-second-line {
-    display: block;
+main {
+    box-sizing: border-box;
+    width: 100%;
+    background-color: var(--main-background);
+    padding: 1rem;
+    border-radius: var(--corner-roundness);
+    box-shadow: 0 0 10px var(--card-shadow);
 }
 
-/* font for email and password */
-.login-form-field::placeholder {
+main ul {
+    list-style: none;
+    margin-bottom: 0;
+    margin-left: 0;
+    margin-right: 0;
+    padding: 0;
+}
 
-    font-family:'Roboto', sans-serif;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 1.5vw;
-    line-height: 2vw;
+main li {
+    margin: 0;
+    padding: 0;
+}
+
+.input-container {
     display: flex;
     align-items: center;
-    text-indent: 3%;
-
-    color: #C1C1C1;
+    border-radius: var(--corner-roundness);
+    box-shadow: 1px 1px 9px 0 var(--card-shadow);
+    border-color: var(--card-shadow);
+    border-width: 2px;
+    border-style: solid;
+    opacity: 60%;
 }
 
-#email-field {
-
-    width: 80%;
-    height: 13%;
-    position: absolute;
-    left: 10%;
-    right: 11.35%;
-    top: 15%;
-
-    background: #FFFFFF;
-    border: 1px solid rgba(0, 0, 0, 0.2);
-    margin-bottom: 41.78px;
-    border-radius: 5px;
+main form input {
+    background-color: rgba(0, 0, 0, 0);
+    color: var(--normal-font-color);
+    font-size: 20px;
+    height: 42px;
+    margin: 5px;
+    border-style: solid;
+    border-color: rgba(0, 0, 0, 0);
+    outline: none;
 }
-  
-#password-field {
 
-    width: 80%;
-    height: 13%;
-    position: absolute;
-    left: 10%;
-    right: 11.35%;
-    top: 40%;
-    
-    background: #FFFFFF;
-    border: 1px solid rgba(0, 0, 0, 0.2);
-    border-radius: 5px;
+main button {
+    border-radius: var(--corner-roundness);
+    padding: 0 9px;
+    margin-left: 2px;
+    margin-right: 2px;
+    height: 31px;
+    cursor: pointer;
+    color: var(--highlighted-font-color);
+
+    user-select: none;
+    vertical-align: middle;
+    border: none;
+    font-size: 14px;
+    font-weight: bold;
+    display: inline;
 }
-#login-form-submit {
-    width: 28%;
-    height: 13%;
-    position: absolute;
-    left: 10%;
-    right: 23.59%;
-    bottom: 19%;
 
-    background: #EF233C;
-    border: 1px solid white;
-    border-radius: 5px;
-    
-    font-family: 'Source Sans Pro', sans-serif;
-    font-size: 2vw;
-    color:white;
+footer {
+    margin-top: var(--margin);
+}
+
+footer > a {
+    display: block;
     text-align: center;
-    
+    font-size: 1.25rem;
+    font-weight: bold;
+    color: var(--normal-font-color);
 }
 
-#login-form-create {
-    width: 47%;
-    height: 13%;
-    position: absolute;
-    left: 43%;
-    bottom: 19%;
-    
-    border: 1px solid white;
-    border-radius: 5px;
-    background-color: black;
-
-    font-family: 'Source Sans Pro', sans-serif;
-    font-size: 2vw;
-    color:white;
+#error-msg {
+    color: var(--error-color);
     text-align: center;
-
+    overflow-wrap: break-word;
 }
 
-/* my journal style */
-#name {
-
-    position: fixed;
-    left: 10%;
-    top: 40%;
-
-    font-family: 'Satisfy', cursive;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 11vw;
-
-    color: #000000;
+#buttons {
+    display: flex;
+    justify-content: center;
 }
 
-/* contact us */
-a {
-
-    position: fixed;
-    bottom: 5%;
-    left:26%;
-
-    font-family:'Tajawal', sans-serif;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 1.5vw;
-    color:black;
+#buttons > li {
+    display: inline;
 }
 
-img {
-    position: absolute;
-    left: 17%;
-    top: 10%;
-
-    max-width: 26vw;
-    max-height: 26vw;
-
-    margin:0;
-
- }
-
-
-@media only screen and (max-width:1000px) {
-    a {
-        display: none;
-    }
-
-    body {
-        background-color: white;
-    }
-
-
-    #name {
-        position: absolute;
-        top:0%;
-        left: 20vw;
-        font-size: 15vw;
-        white-space: nowrap;
-        margin:0;
-    }
-
-    #main-holder {
-        width:100%;
-        left:0%;
-        top:50%;
-        height:50%;
-        box-shadow: none;
-    }
-
-    .login-form-field::placeholder {
-
-        font-size: 3.5vw;
-        text-indent: 3%;
-        line-height: 100%;
-
-    }
-
-    #email-field{
-        height: 17%;
-    }
-
-    #password-field{
-        height: 17%;
-    }
-
-
-    div.logo {
-        position: absolute;
-        display:block;
-        top:25%;
-        left:20%;
-        width:120vw;
-
-    }
-
-    #login-form-submit {
-        font-size: 4vw;
-        height:17%;
-        top: 70%;
-        
-    }
-    
-    #login-form-create {
-        height:17%;
-        top: 70%;
-        font-size: 4vw;
-    }
+#btn-login {
+    background-color: var(--primary-button-color);
 }
 
+#btn-create {
+    background-color: var(--secondary-button-color);
+}
 
-@media only screen and (max-width:600px) {
-    img {
-        position:absolute;
-        top:50%;
-        left:20%;
-    
+.container-list {
+    list-style: none;
+}
 
-    }
+.input-container {
+    margin-bottom: var(--margin);
+}
 
-    #name {
-        position: absolute;
-        top:0%;
-        left: 15vw;
-        font-size: 18vw;
-        margin:0;
-    }
-
+.horizontal-list > li {
+    display: inline;
 }
