front-end/components: Updates header and fixes a couple of issues

--- a/src/front-end/components/header.css
+++ b/src/front-end/components/header.css
@@ -21,7 +21,7 @@
     position: relative;
     height: 56px;
     margin-top: 16px;
-    width: 90%;
+    width: 100%;
     display: flex;
     align-items: center;
     border-bottom: solid 1px var(--divider-color);
@@ -67,7 +67,6 @@ h1 {
     display: inline;
     font-size: 41px;
     font-weight: bold;
-    letter-spacing: 1.1px;
     vertical-align: middle;
 
     z-index: 0;
@@ -77,49 +76,56 @@ h1 {
     display: flex;
     justify-content: flex-end;
     margin-bottom: 17px;
+    margin-right: 10px;
     margin-left: auto;
-    margin-right: 0;
-  }
+}
+
+.search-box + .new-button{
+    margin-left: 0;
+}
   
-  .search-box input {
+.search-box input {
+    display: inline-block;
     border-radius: 5px;
-    border: 0;
+    font-size: 20px;
+    border: none;
     font-size: 20px;
     box-shadow: 1px 1px 9px 0 var(--card-shadow);
-    border-color: var(--card-shadow);
-    border-width: 2px;
     margin-right: 5px;
-    padding:0;
+    padding: 8px 0;
     width: 0;
     height: 36px;
     background-color: rgba(0, 0, 0, 0);
     transition: width 0.45s ease-in-out;
-  }
-  .search-btn:hover{
+    outline:none;
+}
+
+.search-box a {
+    height: 44px;
+}
+
+.search-btn:hover{
     transition: 150ms;
       opacity: 90%;
   }
-  .search-box:hover > .search-input{
+.search-box:hover > .search-input{
     display: inline-block;
+    opacity: 90%;
+}
+.search-box:hover > input{
     border-radius: 5px;
     width: 260px;
     color: var(--normal-font-color);
-    font-size: 20px;
     padding: 8px;
-    border: solid;
-    border-color: rgba(0, 0, 0, 0);
     outline:none;
-  }
+}
 
-  .search-input:focus{
-    display: inline-block;
+input:focus{
     border-radius: 5px;
     width: 260px;
     color: var(--normal-font-color);
     font-size: 20px;
     padding: 8px;
-    border: solid;
-    border-color: rgba(0, 0, 0, 0);
     outline:none;
   }
   .search-btn{
@@ -183,6 +189,11 @@ h1 {
 .search_bar input:focus .search_bar{
     transition: 150ms;
     opacity: 90%;
+}
+.search-btn{
+    height: 28px;
+    padding: 12px 8px 4px;
+    opacity: 60%;
 }
 
 #header_back{
@@ -263,7 +274,6 @@ h1 {
     #title_page{
         top: 5px;
         font-size: 35px;
-        letter-spacing: 1.5px;
     }
 
     button.imgbutton {
@@ -355,7 +365,6 @@ h1 {
     #title_page{
         top: 5px;
         font-size: 22px;
-        letter-spacing: 1px;
     }
 
     #menuToggle input {
