--- a/src/front-end/components/log.css
+++ b/src/front-end/components/log.css
@@ -2,6 +2,12 @@
     padding-bottom: 0;
     width: 100%;
     z-index: -1;
+    scrollbar-width: 5px;
+}
+
+#log::-webkit-scrollbar {
+    width: 5px;
+    height: 5px;
 }
 
 h1 {
