--- a/src/front-end/components/rightSidebar.css
+++ b/src/front-end/components/rightSidebar.css
@@ -6,7 +6,7 @@
     font-family: "SF-Pro";
     max-width: 100%;
     text-align: center;
-    margin: calc(15.77px - 0.5vw) 0 0;
+    margin: 10px 0 0;
 }
 
 #sideCardWrapper{
