--- a/src/front-end/components/inlineDropdown.css
+++ b/src/front-end/components/inlineDropdown.css
@@ -7,7 +7,7 @@
 .dropdown-content {
 	display: none;
 	position: absolute;
-	background-color: var(--card-background);
+	background-color: var(--sidebar-background);
 	overflow: auto;
 	border-radius: 6px;
 	box-shadow: 0 0 10px var(--card-shadow);
@@ -21,7 +21,7 @@
 #myDropdown button {
 	background-color: transparent;
 	border: none;
-	color: var(--dropdown-foreground-color);
+	color: var(--normal-font-color);
 	padding: 10px 1px 10px 18px;
 	text-align: left;
 	text-decoration: none;
@@ -60,7 +60,7 @@ li:hover {
 .extra-dropdown-content {
 	display: none;
 	position: absolute;
-	background-color:var(--card-background);
+	background-color:var(--sidebar-background);
 	overflow: auto;
 	border-radius: 6px;
 	box-shadow: 0 0 10px var(--card-shadow);
