frontend/components/themes: added new themes

--- a/src/front-end/components/indexDropdown.css
+++ b/src/front-end/components/indexDropdown.css
@@ -74,16 +74,16 @@
 }
 
 #open {
-    color:white;
-    background-color: #33b5e5;
-    border: 4px solid #33b5e5 ;
+    color: var(--highlighted-font-color);
+    background-color: var(--primary-button-color);
+    border: 4px solid var(--primary-button-color);
     margin-bottom: 10px;
 }
 
 #edit {
-    color:white;
-    background-color: #ffbb33;
-    border: 4px solid #ffbb33 ;
+    color: var(--highlighted-font-color);
+    background-color: var(--secondary-button-color);
+    border: 4px solid var(--secondary-button-color);
 
 }
 
