--- a/src/front-end/components/header.css
+++ b/src/front-end/components/header.css
@@ -42,7 +42,7 @@ button {
 }
 
 .new-button {
-    color: var(--highlighted-font-color);
+    color: var(--primary-button-font-color);
     background-color: var(--primary-button-color);
     height: 31px;
     float: right;
@@ -55,7 +55,7 @@ button {
 }
 
 .edit-button {
-    color: var(--highlighted-font-color);
+    color: var(--secondary-button-font-color);
     margin-left: 17px;
     background-color: var(--secondary-button-color);
     height: 31px;
@@ -134,6 +134,7 @@ h1 {
     height: 26px;
     padding: 13px 8px 5px;
     opacity: 60%;
+    filter: var(--icon-filter);
 }
 
 .search_bar {
