--- a/src/front-end/components/indexDropdown.css
+++ b/src/front-end/components/indexDropdown.css
@@ -5,8 +5,8 @@
     -moz-user-select: none; 
     -khtml-user-select: none; 
     -ms-user-select: none;
-    --content-foreground-color: #000000;
-    --content-background-color: #ffffff;
+    /* --content-foreground-color: #000000;
+    --content-background-color: #ffffff; */
 }
 
 #wrapper {
@@ -44,11 +44,15 @@
 :not(.open) #arrow img {
     transform: rotate(0deg);
     transition: transform 0.3s ease-in-out;
+    filter: var(--icon-filter);
+    margin-bottom: 2px;
 }
 
 .open #arrow img {
     transform: rotate(180deg);
     transition: 0.3s ease-in-out;
+    filter: var(--icon-filter);
+    margin-bottom: 2px;
 }
 
 :not(.open) #contentWrapper{
@@ -75,14 +79,14 @@
 }
 
 #open {
-    color: var(--highlighted-font-color);
+    color: var(--primary-button-font-color);
     background-color: var(--primary-button-color);
     border: 4px solid var(--primary-button-color);
     margin-bottom: 10px;
 }
 
 #edit {
-    color: var(--highlighted-font-color);
+    color: var(--secondary-button-font-color);
     background-color: var(--secondary-button-color);
     border: 4px solid var(--secondary-button-color);
 
