--- a/src/front-end/components/itemCard.css
+++ b/src/front-end/components/itemCard.css
@@ -1,8 +1,8 @@
 :host{
-	font-family: "SF-Pro", "Roboto";
+    font-family: system-ui;
 }
 .card{
-    font-family: "SF-Pro", "Roboto";
+    font-family: system-ui;
     width: fit-content;
     overflow: hidden;
     border-radius: 15px;
@@ -21,13 +21,13 @@
     text-decoration-thickness: 2px;
     text-align: center;
     text-decoration: underline;
-    filter: var(--card-font-filter);
+    filter: var(--itemcard-font-filter);
 }
 #date{
     font-size: 12pt;
     font-weight: normal;
     text-align: center;
-    filter: var(--card-font-filter);
+    filter: var(--itemcard-font-filter);
 }
 #buttonWrapper{
     text-align:center;
