--- a/src/front-end/components/creator.css
+++ b/src/front-end/components/creator.css
@@ -1,8 +1,8 @@
 :host {
-	font-family:"SF-Pro", "Roboto";
+	font-family: system-ui;
 }
 #textBlock {
-	font-family: "SF-Pro", "Roboto";
+	font-family: system-ui;
 	border: none;
 	overflow: auto;
 	outline: none;
@@ -54,7 +54,7 @@
 }
 
 #textBlock {
-	font-family: "SF-Pro";
+	font-family: system-ui;
 	border: none;
 	overflow: auto;
 	outline: none;
