--- a/src/front-end/components/logCarousel.css
+++ b/src/front-end/components/logCarousel.css
@@ -63,7 +63,7 @@ button {
 h1 {
     height: 18px;
     font-size: 19px;
-    font-family: "SF-Pro";
+    font-family: system-ui;
     font-weight: bold;
 }
 ::-webkit-scrollbar {
