--- a/src/front-end/components/navbar.css
+++ b/src/front-end/components/navbar.css
@@ -56,7 +56,7 @@ button img {
 
 button h1 {
     display:inline-block;
-    font-family: "SF-Pro";
+    font-family: system-ui;
     font-weight: bold;
     font-size: 18px;
     font-weight: 700;
