--- a/src/unitTests/components/block.html
+++ b/src/unitTests/components/block.html
@@ -5,7 +5,7 @@
 			src: url("./public/fonts/SF-Pro.ttf");
 		}
 		#textBlock {
-			font-family: "SF-Pro";
+			font-family: system-ui;
 			border: none;
 			overflow: auto;
 			outline: none;
