--- a/src/front-end/components/generalSettingsPanel.css
+++ b/src/front-end/components/generalSettingsPanel.css
@@ -44,6 +44,7 @@ span button {
     margin-right: 2px;
     cursor: pointer;
     opacity: 0.7;
+    color: var(--card-font-color);
     background-color: var(--card-background);
     border: 1px solid var(--lighter-divider-color);
     box-shadow: 1px 1px 9px 0 var(--card-shadow);
